# CodeScope

./: .dockerignore  .gitignore  AGENTS.md  README.md  deep-research-report.md  start-dev-wsl  start-dev-wsl.sh  一.md  二.md
backend/: .gitignore  README.md  alembic.ini  live_smoke_result.xml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260301_0001_init_user_permission_module.py  20260301_0002_bootstrap_admin_seed.py  20260301_0003_resource_scope_tables.py  20260301_0004_project_import_version_fields.py  20260301_0005_import_idempotency_fields.py  20260301_0006_scan_job_fields.py  20260302_0007_rule_management_tables.py  20260302_0008_selftest_and_finding_fields.py  20260302_0009_finding_labels_table.py  20260304_0011_log_center_foundation.py  (+15 more)
backend/app/: config.py  main.py  models.py
backend/config/: database.env
backend/scripts/: run_external_full_scan_once.py
backend/tests/: conftest.py  test_ai_assessment_prompt_unit.py  test_ai_module.py  test_assessment_context_service.py  test_config_module.py  test_finding_highlight_service.py  test_finding_path_service.py  test_finding_presentation_service.py  test_frontend_proxy_module.py  test_log_center_migration.py  test_project_version_module.py  test_report_module.py  test_rule_module.py  test_rule_set_file_service.py  test_scan_external_builtin.py  test_scan_external_neo4j_runner.py  test_scan_job_module.py  test_scan_job_steps.py  test_scan_service_result_processing.py  test_source_location_service.py  test_trace_repair_service.py  test_user_permission_module.py  test_worker_module.py
(+406 files in other folders)
